--- a/bastion_gazebo/config/style.config
+++ b/bastion_gazebo/config/style.config
@@ -6,7 +6,7 @@
     <state></state>
     <width>1920</width>
     <height>1011</height>
-    <style material_theme="Dark" material_primary="#9fa8da" material_accent="#ef9a9a" toolbar_color_light="#f3f3f3" toolbar_text_color_light="#111111" toolbar_color_dark="#414141" toolbar_text_color_dark="#f3f3f3" plugin_toolbar_color_light="" plugin_toolbar_text_color_light="" plugin_toolbar_color_dark="" plugin_toolbar_text_color_dark=""/>
+    <style material_theme="Dark" material_primary="#e01b24" material_accent="#ffa348" toolbar_color_light="#f3f3f3" toolbar_text_color_light="#111111" toolbar_color_dark="#414141" toolbar_text_color_dark="#f3f3f3" plugin_toolbar_color_light="" plugin_toolbar_text_color_light="" plugin_toolbar_color_dark="" plugin_toolbar_text_color_dark=""/>
     <menus>
         <drawer visible="true" default="false"/>
         <plugins visible="true" from_paths="true"/>
@@ -77,8 +77,8 @@
         <property key="lastHeight" type="int">50</property>
         <property key="cardMinimumWidth" type="int">200</property>
         <property key="cardMinimumHeight" type="int">200</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
     <engine>ogre2</engine>
     <scene>scene</scene>
@@ -150,8 +150,8 @@
         <property key="lastHeight" type="int">370</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">370</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="GzSceneManager" name="Scene Manager">
@@ -218,8 +218,8 @@
         <property key="lastHeight" type="int">130</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">130</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="InteractiveViewControl" name="Interactive view control">
@@ -286,8 +286,8 @@
         <property key="lastHeight" type="int">110</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">110</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="CameraTracking" name="Camera Tracking">
@@ -354,8 +354,8 @@
         <property key="lastHeight" type="int">260</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">260</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="MarkerManager" name="Marker manager">
@@ -422,8 +422,8 @@
         <property key="lastHeight" type="int">230</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">230</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="SelectEntities" name="Select Entities">
@@ -490,8 +490,8 @@
         <property key="lastHeight" type="int">90</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">90</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="Spawn" name="Spawn Entities">
@@ -558,8 +558,8 @@
         <property key="lastHeight" type="int">110</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">110</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="VisualizationCapabilities" name="Visualization Capabilities">
@@ -626,8 +626,8 @@
         <property key="lastHeight" type="int">130</property>
         <property key="cardMinimumWidth" type="int">350</property>
         <property key="cardMinimumHeight" type="int">130</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="WorldControl" name="World control">
@@ -699,8 +699,8 @@
         <property key="lastHeight" type="int">100</property>
         <property key="cardMinimumWidth" type="int">100</property>
         <property key="cardMinimumHeight" type="int">100</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
     <play_pause>true</play_pause>
     <step>true</step>
@@ -776,8 +776,8 @@
         <property key="lastHeight" type="int">110</property>
         <property key="cardMinimumWidth" type="int">290</property>
         <property key="cardMinimumHeight" type="int">110</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
     <sim_time>true</sim_time>
     <real_time>true</real_time>
@@ -790,11 +790,11 @@
         <property key="y" type="double">0</property>
         <property key="z" type="double">0</property>
         <property key="width" type="double">400</property>
-        <property key="height" type="double">375</property>
+        <property key="height" type="double">50</property>
         <property key="opacity" type="double">1</property>
         <property key="enabled" type="bool">true</property>
         <property key="visible" type="bool">true</property>
-        <property key="state" type="string">docked</property>
+        <property key="state" type="string">docked_collapsed</property>
         <property key="baselineOffset" type="double">0</property>
         <property key="clip" type="bool">false</property>
         <property key="focus" type="bool">false</property>
@@ -807,7 +807,7 @@
         <property key="implicitWidth" type="double">0</property>
         <property key="implicitHeight" type="double">0</property>
         <property key="availableWidth" type="double">400</property>
-        <property key="availableHeight" type="double">375</property>
+        <property key="availableHeight" type="double">50</property>
         <property key="padding" type="double">0</property>
         <property key="topPadding" type="double">0</property>
         <property key="leftPadding" type="double">0</property>
@@ -836,7 +836,7 @@
         <property key="showDockButton" type="bool">true</property>
         <property key="showCloseButton" type="bool">true</property>
         <property key="showCollapseButton" type="bool">true</property>
-        <property key="showTitleBar" type="bool">false</property>
+        <property key="showTitleBar" type="bool">true</property>
         <property key="resizable" type="bool">true</property>
         <property key="standalone" type="bool">false</property>
         <property key="dockIcon" type="string">▁</property>
@@ -848,8 +848,8 @@
         <property key="lastHeight" type="int">50</property>
         <property key="cardMinimumWidth" type="int">400</property>
         <property key="cardMinimumHeight" type="int">375</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
 <plugin filename="EntityTree" name="Entity tree">
@@ -858,11 +858,11 @@
         <property key="y" type="double">0</property>
         <property key="z" type="double">0</property>
         <property key="width" type="double">400</property>
-        <property key="height" type="double">587</property>
+        <property key="height" type="double">50</property>
         <property key="opacity" type="double">1</property>
         <property key="enabled" type="bool">true</property>
         <property key="visible" type="bool">true</property>
-        <property key="state" type="string">docked</property>
+        <property key="state" type="string">docked_collapsed</property>
         <property key="baselineOffset" type="double">0</property>
         <property key="clip" type="bool">false</property>
         <property key="focus" type="bool">false</property>
@@ -875,7 +875,7 @@
         <property key="implicitWidth" type="double">0</property>
         <property key="implicitHeight" type="double">0</property>
         <property key="availableWidth" type="double">400</property>
-        <property key="availableHeight" type="double">587</property>
+        <property key="availableHeight" type="double">50</property>
         <property key="padding" type="double">0</property>
         <property key="topPadding" type="double">0</property>
         <property key="leftPadding" type="double">0</property>
@@ -904,7 +904,7 @@
         <property key="showDockButton" type="bool">true</property>
         <property key="showCloseButton" type="bool">true</property>
         <property key="showCollapseButton" type="bool">true</property>
-        <property key="showTitleBar" type="bool">false</property>
+        <property key="showTitleBar" type="bool">true</property>
         <property key="resizable" type="bool">true</property>
         <property key="standalone" type="bool">false</property>
         <property key="dockIcon" type="string">▁</property>
@@ -916,7 +916,75 @@
         <property key="lastHeight" type="int">50</property>
         <property key="cardMinimumWidth" type="int">400</property>
         <property key="cardMinimumHeight" type="int">375</property>
-        <property key="pluginToolBarColor" type="string">#607d8b</property>
-        <property key="pluginToolBarTextColor" type="string">#eeeeee</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
+    </gz-gui>
+</plugin>
+<plugin filename="MouseDrag" name="Mouse drag">
+    <gz-gui>
+        <property key="x" type="double">0</property>
+        <property key="y" type="double">0</property>
+        <property key="z" type="double">0</property>
+        <property key="width" type="double">400</property>
+        <property key="height" type="double">50</property>
+        <property key="opacity" type="double">1</property>
+        <property key="enabled" type="bool">true</property>
+        <property key="visible" type="bool">true</property>
+        <property key="state" type="string">docked_collapsed</property>
+        <property key="baselineOffset" type="double">0</property>
+        <property key="clip" type="bool">false</property>
+        <property key="focus" type="bool">true</property>
+        <property key="activeFocus" type="bool">false</property>
+        <property key="activeFocusOnTab" type="bool">false</property>
+        <property key="rotation" type="double">0</property>
+        <property key="scale" type="double">1</property>
+        <property key="smooth" type="bool">true</property>
+        <property key="antialiasing" type="bool">false</property>
+        <property key="implicitWidth" type="double">0</property>
+        <property key="implicitHeight" type="double">0</property>
+        <property key="availableWidth" type="double">400</property>
+        <property key="availableHeight" type="double">50</property>
+        <property key="padding" type="double">0</property>
+        <property key="topPadding" type="double">0</property>
+        <property key="leftPadding" type="double">0</property>
+        <property key="rightPadding" type="double">0</property>
+        <property key="bottomPadding" type="double">0</property>
+        <property key="spacing" type="double">0</property>
+        <property key="mirrored" type="bool">false</property>
+        <property key="visualFocus" type="bool">false</property>
+        <property key="hovered" type="bool">false</property>
+        <property key="hoverEnabled" type="bool">true</property>
+        <property key="wheelEnabled" type="bool">false</property>
+        <property key="baselineOffset" type="double">0</property>
+        <property key="horizontalPadding" type="double">0</property>
+        <property key="verticalPadding" type="double">0</property>
+        <property key="implicitContentWidth" type="double">0</property>
+        <property key="implicitContentHeight" type="double">0</property>
+        <property key="implicitBackgroundWidth" type="double">0</property>
+        <property key="implicitBackgroundHeight" type="double">0</property>
+        <property key="topInset" type="double">0</property>
+        <property key="leftInset" type="double">0</property>
+        <property key="rightInset" type="double">0</property>
+        <property key="bottomInset" type="double">0</property>
+        <property key="contentWidth" type="double">0</property>
+        <property key="contentHeight" type="double">0</property>
+        <property key="minSize" type="int">50</property>
+        <property key="showDockButton" type="bool">true</property>
+        <property key="showCloseButton" type="bool">true</property>
+        <property key="showCollapseButton" type="bool">true</property>
+        <property key="showTitleBar" type="bool">true</property>
+        <property key="resizable" type="bool">true</property>
+        <property key="standalone" type="bool">false</property>
+        <property key="dockIcon" type="string">▁</property>
+        <property key="collapseIcon" type="string">▴</property>
+        <property key="expandIcon" type="string">▾</property>
+        <property key="floatIcon" type="string">□</property>
+        <property key="closeIcon" type="string">✕</property>
+        <property key="cardBackground" type="string">#00000000</property>
+        <property key="lastHeight" type="int">50</property>
+        <property key="cardMinimumWidth" type="int">400</property>
+        <property key="cardMinimumHeight" type="int">375</property>
+        <property key="pluginToolBarColor" type="string">#ffa348</property>
+        <property key="pluginToolBarTextColor" type="string">#303030</property>
     </gz-gui>
 </plugin>
